Fix wording and pixel alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 }
 
 .app-spreed #app-navigation {
-	padding-top: 46px;
+	padding-top: 45px;
 	padding-bottom: 0;
 }
 
